--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -52,7 +52,7 @@ RSS Feed: https://feeds.feedburner.com/Free-templateco
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-6 mb-5">
-            <img src="images/about.jpeg" alt="Free Website Template by Free-Template.co" class="img-fluid">
+            <img src="images/about.jpeg" alt="Free Website Template by Free-Template.co" class="img-full">
           </div>
           <div class="col-lg-5 ml-auto section-title">
             <h2 class="title text-primary mb-3">About us</h2>
@@ -82,12 +82,106 @@ RSS Feed: https://feeds.feedburner.com/Free-templateco
         <div class="row mb-5 ">
           <div class="col-md-7 section-title text-center mx-auto">
             <span class="sub-title mb-2 d-block">Recent Works</span>
-            <h2 class="title text-primary mb-3">I love what I do, check out some of our latest works</h2>
+            <h2 class="title text-primary mb-3">I love what I do, check out some of my latest works</h2>
           </div>
         </div>
         <div class="row mb-5">
           <div class="col-lg-6 mb-4 mb-lg-0">
-            <img src="images/project-6a.png" alt="Rakata" class="img-fluid">
+            <img src="images/project-10a.png" alt="Rakata" class="img-full">
+          </div>
+          <div class="col-lg-5 h-100 jm-sticky-top ml-auto">
+            <h3>Norton Transport (REVAMP)</h3>
+            <p class="mb-2">Norton Transport is A family-owned business committed to offering affordable, reliable, and safe driveaway services for our customers. We’re happy and humbled to say; we’ve been delivering on this promise for over 20 years.</p>
+            <ul class="mb-4">
+              <li>Frontend - NextJS (bootstrap)</li>
+            </ul>
+            <p class="mb-2"><a href="https://nortontransport-revamp.netlify.app" target="_blank" class="readmore">Visit website</a></p>
+            <div class="testimonial bg-white h-100">
+              <blockquote class="mb-3">
+                <p>My role as Frontend Developer :</p>
+                <ul>
+                  <li>Develop a responsive application based on Figma.</li>
+                  <li>Implement i18n support for multiple languages.</li>
+                </ul>
+              </blockquote>
+            </div>
+          </div>
+        </div>
+        <div class="row mb-5">
+          <div class="col-lg-6 mb-4 mb-lg-0">
+            <img src="images/project-9a.png" alt="Rakata" class="img-full">
+          </div>
+          <div class="col-lg-5 h-100 jm-sticky-top ml-auto">
+            <h3>Driven Logistics</h3>
+            <p class="mb-2">Driven Logistics As heavyweights in the vehicle transport industry, we've put together the technology and load-planning precision that keeps drivers busy and shippers satisfied.</p>
+            <ul class="mb-4">
+              <li>Frontend - NextJS (bootstrap)</li>
+            </ul>
+            <p class="mb-2"><a href="https://drivenlogistics.com" target="_blank" class="readmore">Visit website</a></p>
+            <div class="testimonial bg-white h-100">
+              <blockquote class="mb-3">
+                <p>My role as Frontend Developer :</p>
+                <ul>
+                  <li>Develop a responsive application based on Figma.</li>
+                  <li>Implement Google Analytics to detect every visitor's behavior.</li>
+                </ul>
+              </blockquote>
+            </div>
+          </div>
+        </div>
+        <div class="row mb-5">
+          <div class="col-lg-6 mb-4 mb-lg-0">
+            <img src="images/project-8a.png" alt="Rakata" class="img-full">
+          </div>
+          <div class="col-lg-5 h-100 jm-sticky-top ml-auto">
+            <h3>Ntegral</h3>
+            <p class="mb-2">Ntegral is an Atlanta-based IT Solutions Provider and Consultancy. Our optimized Enterprise Workload Solutions simplify technology transformation for businesses, governments, and non-profits. We specialize in all cloud infrastructures to offer secure in-market products and tailored services for our clients across the globe. Our mission is to enable organizations to scale growth in an evolving business landscape.</p>
+            <ul class="mb-4">
+              <li>Backend - NodeJS (Strapi)</li>
+              <li>Frontend - NextJS (bootstrap)</li>
+              <li>Database - PosgreSQL</li>
+            </ul>
+            <p class="mb-2"><a href="https://www.ntegral.com" target="_blank" class="readmore">Visit website</a></p>
+            <div class="testimonial bg-white h-100">
+              <blockquote class="mb-3">
+                <p>My role as Fullstack Developer :</p>
+                <ul>
+                  <li>Develop a responsive application based on Figma.</li>
+                  <li>Developed a Rest API to manage data and provide frontend needs.</li>
+                </ul>
+              </blockquote>
+            </div>
+          </div>
+        </div>
+        <div class="row mb-5">
+          <div class="col-lg-6 mb-4 mb-lg-0">
+            <img src="images/project-7a.png" alt="Rakata" class="img-full">
+          </div>
+          <div class="col-lg-5 h-100 jm-sticky-top ml-auto">
+            <h3>Motivated</h3>
+            <p class="mb-2">Motivated offers a technology platform for registered users to access specific products and services sold or offered by third-party healthcare providers, physicians, pharmacies, or other vendors.</p>
+            <ul class="mb-4">
+              <li>Backend - NodeJS (Strapi)</li>
+              <li>Frontend - NextJS (tailwind)</li>
+              <li>Database - PosgreSQL</li>
+            </ul>
+            <p class="mb-2"><a href="https://motivated.com" target="_blank" class="readmore">Visit website</a></p>
+            <div class="testimonial bg-white h-100">
+              <blockquote class="mb-3">
+                <p>My role as Frontend Developer :</p>
+                <ul>
+                  <li>Develop a responsive application based on Figma.</li>
+                  <li>Implement Mixpanel to detect every visitor's behavior.</li>
+                  <li>Connect with the backend using graphql.</li>
+                  <li>Develop a custom dynamic survey using SurveyJS.</li>
+                </ul>
+              </blockquote>
+            </div>
+          </div>
+        </div>
+        <div class="row mb-5">
+          <div class="col-lg-6 mb-4 mb-lg-0">
+            <img src="images/project-6a.png" alt="Rakata" class="img-full">
           </div>
           <div class="col-lg-5 h-100 jm-sticky-top ml-auto">
             <h3>Rakata</h3>
@@ -100,27 +194,12 @@ RSS Feed: https://feeds.feedburner.com/Free-templateco
             <p class="mb-2"><a href="https://rakata.id" target="_blank" class="readmore">Visit website</a></p>
             <div class="testimonial bg-white h-100">
               <blockquote class="mb-3">
-                <p>"My role was as a frontend developer helping build the main website by implementing Firebase notifications and SSO."</p>
-              </blockquote>
-            </div>
-          </div>
-        </div>
-        <div class="row mb-5">
-          <div class="col-lg-6 mb-4 mb-lg-0">
-            <img src="images/project-5a.jpg" alt="Beli Yang Baik" class="img-fluid">
-          </div>
-          <div class="col-lg-5 h-100 jm-sticky-top ml-auto">
-            <h3>Beli Yang Baik</h3>
-            <p class="mb-2">WWF-Indonesia campaign website the sustainability of some of the most important ecosystems on Earth is being threatened by our increasing consumption of natural resources: water, food crops, forest products, seafood, as well as non-renewable energy.</p>
-            <ul class="mb-4">
-              <li>Backend - NodeJS (Express)</li>
-              <li>Frontend - ReactJS (Material UI)</li>
-              <li>Database - MySQL (Sequelize)</li>
-            </ul>
-            <p class="mb-2"><a href="https://beliyangbaik.org" target="_blank" class="readmore">Visit website</a></p>
-            <div class="testimonial bg-white h-100">
-              <blockquote class="mb-3">
-                <p>"My role in Beli Yang Baik as a Full Stack Developer helps Backend and Admin Frontend, I focus on develop API for Web App using NodeJS and develop Admin Dashboard for manage Data for Landing App."</p>
+                <p>My role as Frontend Developer :</p>
+                <ul>
+                  <li>Develop a responsive application based on Figma.</li>
+                  <li>Implement Firebase Messaging for push notifications.</li>
+                  <li>Implement a single sign-on for Facebook, Google, and Apple.</li>
+                </ul>
               </blockquote>
             </div>
           </div>
@@ -128,13 +207,44 @@ RSS Feed: https://feeds.feedburner.com/Free-templateco
         <div class="row mb-5">
           <div class="row col-lg-6 mb-4 mb-lg-0">
             <div class="col-lg-12 mb-4">
-              <img src="images/project-3a.jpg" alt="Herbal Katalog" class="img-fluid">
+              <img src="images/project-5a.jpg" alt="Beli Yang Baik" class="img-full">
             </div>
             <div class="col-lg-12 mb-4">
-              <img src="images/project-3b.jpg" alt="Super Grosir Herbal" class="img-fluid">
+              <img src="images/project-5b.png" alt="Dashboard Beli Yang Baik" class="img-full">
+            </div>
+          </div>
+          <div class="col-lg-5 h-100 jm-sticky-top ml-auto">
+            <h3>Beli Yang Baik</h3>
+            <p class="mb-2">WWF-Indonesia campaign website the sustainability of some of the most important ecosystems on Earth is being threatened by our increasing consumption of natural resources: water, food crops, forest products, seafood, as well as non-renewable energy.</p>
+            <ul class="mb-4">
+              <li>Backend - NodeJS (Express)</li>
+              <li>Frontend - ReactJS (styled-components)</li>
+              <li>Admin Frontend - ReactJS (Material UI)</li>
+              <li>Database - MySQL (Sequelize)</li>
+            </ul>
+            <p class="mb-2"><a href="https://beliyangbaik.org" target="_blank" class="readmore">Visit website</a></p>
+            <div class="testimonial bg-white h-100">
+              <blockquote class="mb-3">
+                <p>My role as Fullstack Developer :</p>
+                <ul>
+                  <li>Develop a responsive dashboard admin to manage data and frontend needs.</li>
+                  <li>Develop a Rest API to be consumed by landing and admin applications.</li>
+                  <li>Implement JWT for authentication</li>
+                </ul>
+              </blockquote>
+            </div>
+          </div>
+        </div>
+        <div class="row mb-5">
+          <div class="row col-lg-6 mb-4 mb-lg-0">
+            <div class="col-lg-12 mb-4">
+              <img src="images/project-3a.jpg" alt="Herbal Katalog" class="img-full">
             </div>
             <div class="col-lg-12 mb-4">
-              <img src="images/project-3c.jpg" alt="Dropshipping Herbal" class="img-fluid">
+              <img src="images/project-3b.jpg" alt="Super Grosir Herbal" class="img-full">
+            </div>
+            <div class="col-lg-12 mb-4">
+              <img src="images/project-3c.jpg" alt="Dropshipping Herbal" class="img-full">
             </div>
           </div>
           <div class="col-lg-5 h-100 jm-sticky-top ml-auto">
@@ -143,13 +253,20 @@ RSS Feed: https://feeds.feedburner.com/Free-templateco
             <ul class="mb-4">
               <li>Backend - NodeJS (Express)</li>
               <li>Frontend - ReactJS</li>
+              <li>Admin Frontend - ReactJS (Material UI)</li>
               <li>Database - MySQL (Sequelize)</li>
               <li>Server - AWS (EC2)</li>
             </ul>
             <p class="mb-2"><a href="https://herbalkatalog.com/" target="_blank" class="readmore">Visit website</a></p>
             <div class="testimonial bg-white h-100">
               <blockquote class="mb-3">
-                <p>"My role as Full Stack Developer. I develop APIs for all websites using NodeJS and develop Landing Pages of all those websites."</p>
+                <p>My role as Fullstack Developer :</p>
+                <ul>
+                  <li>Develop a responsive dashboard admin to manage data and frontend needs.</li>
+                  <li>Implement Google Analytics to detect every visitor's behavior.</li>
+                  <li>Develop a Rest API to be consumed by landing and admin applications.</li>
+                  <li>Implement JWT for authentication</li>
+                </ul>
               </blockquote>
             </div>
           </div>
@@ -157,10 +274,10 @@ RSS Feed: https://feeds.feedburner.com/Free-templateco
         <div class="row mb-5">
           <div class="row col-lg-6 mb-4 mb-lg-0">
             <div class="col-sm-6 mb-4 mb-sm-0">
-              <img src="images/project-4b.jpg" alt="Sobat BUMN A1" class="img-fluid">
+              <img src="images/project-4b.jpg" alt="Sobat BUMN A1" class="img-full">
             </div>
             <div class="col-sm-6">
-              <img src="images/project-4a.jpg" alt="Sobat BUMN A2" class="img-fluid">
+              <img src="images/project-4a.jpg" alt="Sobat BUMN A2" class="img-full">
             </div>
           </div>
           <div class="col-lg-5 h-100 jm-sticky-top ml-auto">
@@ -174,7 +291,11 @@ RSS Feed: https://feeds.feedburner.com/Free-templateco
             <!-- <p class="mb-2"><a href="https://borneotrip.id" target="_blank" class="readmore">Visit website</a></p> -->
             <div class="testimonial bg-white h-100">
               <blockquote class="mb-3">
-                <p>"My role in Sobat BUMN as a Mobile Developer. I develop 2 applications, namely applications for controllers and reporters. Journalists themselves are used by officers to submit reports, change the status of reports and add evidence related to reports reported by journalists. while the whistleblower is used by BUMN employees to correct each other's work, in order to provide the best service for the community."</p>
+                <p>My role as Mobile Developer :</p>
+                <ul>
+                  <li>Develop 2 mobile applications called Controller and Reporter.</li>
+                  <li>Implement One Signal for push notifications.</li>
+                </ul>
               </blockquote>
             </div>
           </div>
@@ -182,10 +303,10 @@ RSS Feed: https://feeds.feedburner.com/Free-templateco
         <div class="row mb-5">
           <div class="row col-lg-6 mb-4 mb-lg-0">
             <div class="col-sm-6 mb-4 mb-sm-0">
-              <img src="images/project-1a.png" alt="Borneotrip A1" class="img-fluid">
+              <img src="images/project-1a.png" alt="Borneotrip A1" class="img-full">
             </div>
             <div class="col-sm-6">
-              <img src="images/project-1b.jpg" alt="Borneotrip A2" class="img-fluid">
+              <img src="images/project-1b.jpg" alt="Borneotrip A2" class="img-full">
             </div>
           </div>
           <div class="col-lg-5 h-100 jm-sticky-top ml-auto">
@@ -199,7 +320,12 @@ RSS Feed: https://feeds.feedburner.com/Free-templateco
             <p class="mb-2"><a href="https://borneotrip.id" target="_blank" class="readmore">Visit website</a></p>
             <div class="testimonial bg-white h-100">
               <blockquote class="mb-3">
-                <p>"My role as Backend Developer. I focus on develop APIs for mobile apps using NodeJS."</p>
+                <p>My role as Backend Developer :</p>
+                <ul>
+                  <li>Develop a Rest API to be consumed by mobile application.</li>
+                  <li>Implement JWT for authentication</li>
+                  <li>Implement Websocket for real-time messaging.</li>
+                </ul>
               </blockquote>
             </div>
           </div>
