--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
           <div class="education last">
             <div class="education-info">
               <div class="title">
-                Undergraduate Computer Science
+                Graduated Computer Science
                 <br>at Brawijaya University
               </div>
               <div class="duration">
