--- a/index.html
+++ b/index.html
@@ -335,28 +335,28 @@
             <div class="skills">
               <div class="skill"><strong>Master</strong></div>
               <p>
-                NodeJS, AngularJS, ReactJS, HTML5, CSS3, Javascript, PHP, Laravel, C++, MySql, MongoDB, ExpressJS, Git
+                NodeJS, Go, Javascript, PHP, AngularJS, ReactJS, VueJS, ExpressJS, Laravel, PosgreSql, MySql, MongoDB, Git
               </p>
             </div>
 
             <div class="skills">
               <div class="skill"><strong>Advanced</strong></div>
               <p>
-                Ruby, VueJS, OpenCV, Matlab, Rails, Python, Go, Echo, Gin, Java
+                Python, Java, C++, Swift, SwiftUI
               </p>
             </div>
 
             <div class="skills">
               <div class="skill"><strong>Intermediate</strong></div>
               <p>
-                C#, PosgreSql, System Administration
+                OpenCV, Ruby, C#, Rails
               </p>
             </div>
 
             <div class="skills">
               <div class="skill"><strong>Beginner</strong></div>
               <p>
-                Deep Learning
+                Deep Learning, Machine Learning, Artificial Intelligence
               </p>
             </div>
 
@@ -435,13 +435,40 @@
           <div class="employment">
             <div class="employment-info">
               <div class="title">
+                <a href="https://sociolla.com/" target="_blank">
+                  <strong>Research And Development Specialist </strong>at PT. Sociolla Ritel Indonesia
+                </a>
+              </div>
+              <a class="content" href="https://sociolla.com/" target="_blank">https://sociolla.com/</a>
+              <div class="duration">
+                <p>Sept 2024 - Present</p>
+              </div>
+            </div>
+            <div class="info">
+              <ul class="list">
+                <li>
+                  Analyze error logs, perform root cause analysis, and resolve technical problems quickly to minimize impact on production
+                </li>
+                <li>
+                  Analyze and optimize slow MongoDB queries to improve database performance, reducing latency and improving response times for end-users
+                </li>
+                <li>
+                  Design and develop internal tools to improve visibility into production issues, making it easier for teams to track, prioritize, and resolve technical problems
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="employment">
+            <div class="employment-info">
+              <div class="title">
                 <a href="https://aladinmall.id/" target="_blank">
                   <strong>Lead Backend Engineer </strong>at PT. MNC Aladin Indonesia (E-Commerce App)
                 </a>
               </div>
               <a class="content" href="https://aladinmall.id/" target="_blank">https://aladinmall.id/</a>
               <div class="duration">
-                <p>March 2022 - Present</p>
+                <p>March 2022 - August 2024</p>
               </div>
             </div>
             <div class="info">
