--- a/index.html
+++ b/index.html
@@ -453,6 +453,9 @@
                   Analyze and optimize slow MongoDB queries to improve database performance, reducing latency and improving response times for end-users
                 </li>
                 <li>
+                  Implemented advanced tracing mechanisms and resolved memory leaks in Node.js applications to enhance system reliability and performance
+                </li>
+                <li>
                   Design and develop internal tools to improve visibility into production issues, making it easier for teams to track, prioritize, and resolve technical problems
                 </li>
               </ul>
