--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
             <div class="employment-info">
               <div class="title">
                 <a href="https://aladinmall.id/" target="_blank">
-                  <strong>Lead Backend Engineer </strong>at PT. MNC Aladin Indonesia (E-Commerce App)
+                  <strong>Lead Backend Engineer</strong> at PT. MNC Aladin Indonesia (E-Commerce App)
                 </a>
               </div>
               <a class="content" href="https://aladinmall.id/" target="_blank">https://aladinmall.id/</a>
@@ -477,38 +477,41 @@
             <div class="info">
               <ul class="list">
                 <li>
-                  Manage team and support issues in productions
+                  Led a backend engineering team, providing mentorship, resolving production issues, and ensuring seamless platform operations.
                 </li>
                 <li>
-                  Implement Microservices with Go Language
+                  Architected and deployed scalable microservices using Go, enhancing system modularity and performance.
                 </li>
                 <li>
-                  Create Seller Center Web Dashboard using ReactJS
+                  Developed an intuitive Seller Center web dashboard using ReactJS, empowering sellers to manage their online stores efficiently.
                 </li>
                 <li>
-                  Develop GraphQL API using AWS Amplify 
+                  Built and optimized GraphQL APIs with AWS Amplify, streamlining data querying for frontend applications.
                 </li>
                 <li>
-                  Implement AWS Lambda, Service Worker (SQS) and Scraping Hotel Provider Websites (Pupeteer)
+                  Implemented serverless workflows with AWS Lambda and SQS, automating processes and improving scalability.
                 </li>
                 <li>
-                  Develop Widget App using Vue 3 supports Google Ads Manager 
+                  Scraped and integrated hotel provider data using Puppeteer, enabling dynamic inventory updates and pricing accuracy.
                 </li>
                 <li>
-                  Integrated with 3rd party API (Alfacart, 3PL and some Payment Aggregator)
+                  Created a Vue 3-based widget application integrated with Google Ads Manager, driving personalized advertising capabilities.
                 </li>
                 <li>
-                  Using DynamoDB, PosgreSql for Database
+                  Streamlined operations by integrating third-party APIs, including Alfacart, 3PL services, and various payment aggregators.
+                </li>
+                <li>
+                  Leveraged DynamoDB and PostgreSQL to design robust and efficient database architectures for diverse use cases.
                 </li>
               </ul>
             </div>
-          </div>
+          </div>          
 
           <div class="employment">
             <div class="employment-info">
               <div class="title">
                 <a href="https://ekosis.id" target="_blank">
-                  <strong>Full Stack Developer </strong>at PT. Ekosistem Bisnis Nusantara (Integrated Agribusiness Ecosystem)
+                  <strong>Full Stack Developer</strong> at PT. Ekosistem Bisnis Nusantara (Integrated Agribusiness Ecosystem)
                 </a>
               </div>
               <a class="content" href="https://ekosis.id" target="_blank">https://ekosis.id/</a>
@@ -519,26 +522,26 @@
             <div class="info">
               <ul class="list">
                 <li>
-                  Create Marketplace Web Apps using ReactJS
+                  Designed and developed a dynamic marketplace web application using ReactJS, enhancing the buying and selling experience for users.
                 </li>
                 <li>
-                  Develop API for Web and Mobile Apps using NodeJS (ExpressJS)
+                  Built and maintained RESTful APIs with Node.js (ExpressJS) to support seamless integration across web and mobile platforms.
                 </li>
                 <li>
-                  Implement Micro Services, Create Own ReactJS Module and integrated several 3rd party API for development (Payment Services, Google Services, Websocket)
+                  Implemented microservices architecture, developed custom ReactJS modules, and integrated multiple third-party APIs, including payment services, Google APIs, and WebSocket for real-time features.
                 </li>
                 <li>
-                  Using MySql, MongoDB for Database
+                  Managed and optimized databases using MySQL and MongoDB, ensuring efficient data storage and retrieval.
                 </li>
               </ul>
             </div>
-          </div>
+          </div>          
 
           <div class="employment">
             <div class="employment-info">
               <div class="title">
                 <a href="https://borneotrip.id" target="_blank">
-                  <strong>Remote Full Stack Developer </strong>at Cakrawala Borneo Sinergi (Travel App provided by South Kalimantan Provincial Tourism Office)
+                  <strong>Remote Full Stack Developer</strong> at Cakrawala Borneo Sinergi (Travel App provided by South Kalimantan Provincial Tourism Office)
                 </a>
               </div>
               <a class="content" href="https://borneotrip.id" target="_blank">https://borneotrip.id/</a>
@@ -549,13 +552,13 @@
             <div class="info">
               <ul class="list">
                 <li>
-                  Create Dashboard Apps to manage users, products and transactions using AngularJS
+                  Developed an intuitive dashboard application using AngularJS, enabling administrators to efficiently manage users, products, and transactions.
                 </li>
                 <li>
-                  Create API for Web and Mobile Apps using NodeJS (ExpressJS)
+                  Designed and implemented RESTful APIs with Node.js (ExpressJS) to power both web and mobile applications, ensuring seamless functionality across platforms.
                 </li>
                 <li>
-                  Using MongoDB and integrated several 3rd party API for development (Midtrans, Google Services)
+                  Utilized MongoDB for efficient data storage and integrated third-party APIs such as Midtrans and Google Services to enhance payment and user experience capabilities.
                 </li>
               </ul>
             </div>
@@ -565,7 +568,7 @@
             <div class="employment-info">
               <div class="title">
                 <a href="https://metrasat.co.id/" target="_blank">
-                  <strong>Full Stack Developer </strong>at Metrasat (Strategic Investment Holding Company)
+                  <strong>Full Stack Developer</strong> at Metrasat (Strategic Investment Holding Company)
                 </a>
               </div>
               <a class="content" href="https://metrasat.co.id/" target="_blank">https://metrasat.co.id/</a>
@@ -576,13 +579,13 @@
             <div class="info">
               <ul class="list">
                 <li>
-                  Develop Monolith Internal Web Apps using PHP (Code Igniter)
+                  Developed internal monolithic web applications using PHP (CodeIgniter), streamlining internal workflows and boosting team productivity.
                 </li>
                 <li>
-                  Create API for Web and Mobile Apps using NodeJS (ExpressJS) with integrated different IOT System Modules
+                  Designed and implemented APIs for web and mobile applications using Node.js (ExpressJS), integrating various IoT system modules for seamless data exchange.
                 </li>
                 <li>
-                  Create Web Apps using ReactJS for Statistics all of IOT System Modules and using MongoDB for module storage data
+                  Built dynamic web applications with ReactJS to display statistics from IoT system modules, utilizing MongoDB for efficient data storage and retrieval.
                 </li>
               </ul>
             </div>
@@ -592,7 +595,7 @@
             <div class="employment-info">
               <div class="title">
                 <a href="https://gumcode.net/" target="_blank">
-                  <strong>Full Stack Developer </strong>at Gumcode (IT Consultant)
+                  <strong>Full Stack Developer</strong> at Gumcode (IT Consultant)
                 </a>
               </div>
               <a class="content" href="https://gumcode.net/" target="_blank">https://gumcode.net/</a>
@@ -603,35 +606,35 @@
             <div class="info">
               <ul class="list">
                 <li>
-                  Analyze and implement Design Model System based on Client
+                  Analyzed client requirements and implemented tailored design models, ensuring effective system architecture and alignment with business needs.
                 </li>
                 <li>
-                  Create different Monolith Web Apps using PHP (Laravel)
+                  Developed and maintained a variety of monolithic web applications using PHP (Laravel), optimizing performance and user experience.
                 </li>
                 <li>
-                  Create different Web Apps using VueJS and AngularJS
+                  Built dynamic, responsive web applications with Vue.js and AngularJS, enhancing interactivity and usability for end-users.
                 </li>
                 <li>
-                  Create different API for Web and Mobile Apps using PHP (Code Igniter, Laravel, Lumen) and NodeJS (ExpressJS).
+                  Created robust APIs for both web and mobile applications using PHP (CodeIgniter, Laravel, Lumen) and Node.js (ExpressJS), enabling smooth system integration.
                 </li>
                 <li>
-                  Using MySql and integrated several 3rd party API for development (Midtrans, Google Services)
+                  Leveraged MySQL for database management and integrated third-party APIs, including Midtrans and Google Services, to enhance functionality and payment capabilities.
                 </li>
                 <li>
-                  Diagnosed and troubleshoot different websites of the company"s client by deploying updated knowledge of the modern technologies and techniques in the industry 
+                  Diagnosed and troubleshot client websites, applying modern development techniques to resolve issues and improve system performance.
                 </li>
                 <li>
-                  Lead my team during development
+                  Led development teams through all project stages, from initial design to deployment, ensuring timely and high-quality delivery.
                 </li>
               </ul>
             </div>
-          </div>
+          </div>          
 
           <div class="employment">
             <div class="employment-info">
               <div class="title">
                 <a href="https://bijii.co/">
-                  <strong>Software Engineer </strong>at Biji Inovasi (IT Consultant)
+                  <strong>Software Engineer</strong> at Biji Inovasi (IT Consultant)
                 </a>
               </div>
               <a class="content" href="https://bijii.co/" target="_blank">https://bijii.co/</a>
@@ -642,38 +645,38 @@
             <div class="info">
               <ul class="list">
                 <li>
-                  Analyze and implement Design Model System based on Client
+                  Collaborated with clients to analyze requirements and implement custom design models, ensuring tailored solutions that aligned with their business objectives.
                 </li>
                 <li>
-                  Create different Monolith Web Apps using PHP (Laravel)
+                  Developed scalable monolithic web applications using PHP (Laravel), delivering high-performance solutions for client needs.
                 </li>
                 <li>
-                  Create different Web Apps using AngularJS
+                  Built dynamic, user-centric web applications using AngularJS, enhancing functionality and user experience across platforms.
                 </li>
                 <li>
-                  Create different API for Web and Mobile Apps using PHP (Laravel, Lumen) and NodeJS (ExpressJS)
+                  Designed and developed APIs for web and mobile applications using PHP (Laravel, Lumen) and Node.js (ExpressJS), enabling smooth system integrations.
                 </li>
                 <li>
-                  Create different Desktop Apps integrated with Deep Learning (Image Tracking)
+                  Developed desktop applications integrated with deep learning technologies (image tracking), providing cutting-edge solutions for clients.
                 </li>
                 <li>
-                  Using MySql and integrated several 3rd party API for development (Google Services)
+                  Managed MySQL databases and integrated third-party APIs, including Google Services, to enhance functionality and provide seamless user interactions.
                 </li>
                 <li>
-                  Diagnosed and troubleshoot different websites of the company"s client by deploying updated knowledge of the modern technologies and techniques in the industry 
+                  Diagnosed and troubleshot client websites, leveraging up-to-date technologies and techniques to resolve issues and improve system efficiency.
                 </li>
                 <li>
-                  Lead my team during development
+                  Led development teams through all phases of the project lifecycle, ensuring timely delivery of high-quality solutions.
                 </li>
               </ul>
             </div>
-          </div>
+          </div>          
 
           <div class="employment">
             <div class="employment-info">
               <div class="title">
                 <a href="#">
-                  <strong>Practicum Assistant </strong>at Software Engineering Research Lab, FILKOM Brawijaya University
+                  <strong>Practicum Assistant</strong> at Software Engineering Research Lab, FILKOM Brawijaya University
                 </a>
               </div>
               <div class="duration">
@@ -683,11 +686,14 @@
             <div class="info">
               <ul class="list">
                 <li>
-                  Web programming assistant
+                  Assisted in teaching web programming concepts to undergraduate students, providing hands-on guidance and support in coding and project development.
+                </li>
+                <li>
+                  Collaborated with faculty members to develop and maintain lab materials and assignments, ensuring a high-quality learning experience.
                 </li>
               </ul>
             </div>
-          </div>
+          </div>          
         </div>
       </section>
 
@@ -698,7 +704,7 @@
             <div class="project-info">
               <div class="title">
                 <a href="#">
-                  <strong>Programmer </strong>at Robotics Research Lab, FILKOM Brawijaya University
+                  <strong>Programmer</strong> at Robotics Research Lab, FILKOM Brawijaya University
                 </a>
               </div>
             </div>
@@ -707,12 +713,18 @@
             </div>
             <div class="info">
               <ul class="list">
-                <li>Develop soccer robot framework using C++</li>
-                <li>Computer vision research in robot soccer</li>
-                <li>Robot Soccer Trainer</li>
+                <li>
+                  Developed and optimized a soccer robot framework using C++, enhancing the robot's performance in dynamic environments and real-time decision making.
+                </li>
+                <li>
+                  Conducted computer vision research to improve the robot's visual recognition and tracking abilities, contributing to advancements in robot soccer strategies.
+                </li>
+                <li>
+                  Designed and implemented a "Robot Soccer Trainer" system, simulating various game scenarios to improve the training efficiency and strategy development for the robots.
+                </li>
               </ul>
             </div>
-          </div>
+          </div>          
         </div>
       </section>
 
