--- a/index.html
+++ b/index.html
@@ -422,10 +422,7 @@
       <section class="card">
         <div class="section-header">Summary</div>
         <div class="section-content" id="summary">
-          Hello world my name san, I am a programmer who previously a designer. I loved programming since 2014
-          especially with latest technology. I loved both of Backend and Frontend Development. Recently, I"m interested
-          in Machine Learning or Artificial Intelligence,
-          I thought both of them is very cool and will be the future of technology.
+          Hello world, my name is San, and I am a passionate programmer driven by the ever-evolving world of technology. With expertise in both frontend and backend development, I thrive on working with cutting-edge tools and frameworks. Over time, my fascination with Machine Learning and Artificial Intelligence has deepened, as I firmly believe these fields will redefine the future of technology and innovation.
         </div>
       </section>
       <section class="card">
